# bjtu-simd-proj

./: README.md  anchor  env.sh
code/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  toolchain.cmake
code/clib/include/: see.h  tensor.h
code/clib/src-common/: see.c
code/clib/src-simd/: tensor.c
code/clib/src-std/: tensor.c
code/exe/: alex-net.c  run-layer-test.c  tensor-diff.c
code/src/: main.c
code/src/clib/include/: tensor.h
code/src/clib/src-simd/: tensor.c
code/src/clib/src-std/: tensor.c
code/tlib/include/: test-helper.h  test-layer.h
code/tlib/src/: test-helper.c  test-layer.c
code/unittest/relu/: tInfo0.txt
code/unittest/test-gen/: conv2d.py  fc.py  gen.py  lib.py  maxpool2d.py  relu.py  softmax.py
code/unittest/utils/: anchor  env.sh  gen-suite.sh  run-test-for-layer.sh  run-test-of-layer-simd.sh  run-test-of-layer-std.sh
code/utils/: anchor  build-debug-dev.sh  build-debug.sh  build-release.sh  env.sh  run-alex-net-and-compare.sh  run-alex-net-simd.sh  run-alex-net-std.sh
doc/: alex-net.md
docker/: Dockerfile  build-image.sh  goto-container.sh  run-container.sh
utils/: copy-id-to-server.sh  copy-project-to-remote-and-run.sh  run-command-on-server.sh  test-alex-net-on-server.sh  true-ssh.sh
